# color_helper

./: .gitignore  CMakeLists.txt
res/: main.txt  minimal.txt
src/: color_detect.c  color_detect.h  gui.c  gui.h  preferences.c  preferences.h  preferences_dialog.c  preferences_dialog.h  screengrab.c  screengrab.h  util.c  util.h
